--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>preview whatsapp</title>
+    <link rel="icon" type="image/x-icon" href=" https://tochatbe.s3.eu-west-3.amazonaws.com/uploads/logo/chat-with-6450b1ab41ea1438850466.png">
 
     <meta property="og:title" content="{{ name }}" />
     <meta property="og:description" content="" />
