--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta property="og:image" content="https://tochatbe.s3.eu-west-3.amazonaws.com/uploads/campaigns/y8-ptbap90a-png-1689848932.png" />
     <meta property="og:url" content="https://services.tochat.be" />
     <meta property="og:type" content="website" />
+    <meta http-equiv="refresh" content="0; URL=https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf">
+
 </head>
 <body>
 <img src="https://tochatbe.s3.eu-west-3.amazonaws.com/uploads/campaigns/y8-ptbap90a-png-1689848932.png" alt="name"/>
